[gd_scene load_steps=3 format=3 uid="uid://bjsfq2u1w3ta"]

[ext_resource type="Script" path="res://scripts/tower_panel.gd" id="1_ft431"]
[ext_resource type="Texture2D" uid="uid://0645lvdokd0" path="res://assets/sprites/buildings/stone-tower-1.webp" id="2_dvfqj"]

[node name="TowerPanel" type="Panel"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ft431")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 250.0
offset_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
texture = ExtResource("2_dvfqj")
stretch_mode = 4

[node name="Label" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Archer Tower [img=10x10]res://assets/sprites/icons/bow-icon-1.png[/img] 
[color=green]dmg: 50 [img=10x10]res://assets/sprites/icons/dmg-icon-1.png[/img]
range: 200
atk-spd: 2 
[color=red]cost: 100 "
fit_content = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
